--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -30,7 +30,7 @@
     			Welcome To
     		</span>
     		<br/>
-    		<span style='font-size:3em;font-weight:bold;'>
+    		<span class='frp-font' style='font-size:3em;'>
     			FISHER ROELAND PROPERTIES
     		</span>
     		<hr style='width:50%;height:2px;color:#a1be14;background-color:#a1be14;border:none;'/>
