--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -11,8 +11,50 @@
 
 	<div style='width:100%; position: relative;'>
 
-		<img style='width:100%;display: block;z-index:1;' ng-src="/static/image/slide01.jpg"/>
+		<!-- rotating image 1 -->	
+		<div style='
+		    z-index:1;
+		    top:0;
+		    left:0;
+		    width:100%;
+		    height:100%;'>
+
+	    	<img style='
+				width:100%;
+				height:100%;'
+
+				ng-src="/static/image/slide01.jpg"/>
+		</div>
+
+ 		<!-- rotating image 2 -->
+		<div style='position:absolute;
+		    z-index:1;
+		    top:0;
+		    left:0;
+		    width:100%;
+		    height:100%;'>
+		    	    	<img style='
+				width:100%;
+				height:100%;'
+
+				ng-src="/static/image/slide02.jpg"/>
+		</div>
+
+ 		<!-- rotating image 3 -->
+		<div style='position:absolute;
+		    z-index:1;
+		    top:0;
+		    left:0;
+		    width:100%;
+		    height:100%;'>
+		    	    	<img style='
+				width:100%;
+				height:100%;'
+
+				ng-src="/static/image/slide03.jpg"/>
+		</div>
  
+ 		<!-- black overlay -->
 		<div style='position:absolute;
 		    z-index:2;
 		    top:0;
