--- a/django_web_server/static/fragments/navbar.html
+++ b/django_web_server/static/fragments/navbar.html
@@ -8,47 +8,23 @@
 					alt="Fisher Roeland Properties" />
 			</span>
 		  	<span style='padding-left:100px;'>
+
+				<a href='#' ng-click="gotoHomeView();"
+					ng-class="(view == Views.HOME) ? 'nav-active' : 'nav-inactive'"
+					>
+					Home
+				</a>
+
+				<a ng-repeat='category in model.categories'
+					href='#' ng-click="gotoCategoryView(category);"
+					ng-class="((view == Views.CATEGORY) && (selectedCategory == category)) ? 'nav-active' : 'nav-inactive'"
+					>
+					{{ category }}
+				</a>
+
 				<a href='#' 
-				ng-click="gotoView(Views.HOME);"
-				ng-class="nlIsActive(Views.HOME) ? 'nav-active' : 'nav-inactive'"
-					>Home</a>
-				<a href='#' 
-				ng-click="gotoView(Views.COMMERCIAL);"
-				ng-class="nlIsActive(Views.COMMERCIAL) ? 'nav-active' : 'nav-inactive'"
-					>Commercial</a>
-				<a href='#' 
-				ng-click="gotoView(Views.INDUSTRIAL);"
-				ng-class="nlIsActive(Views.INDUSTRIAL) ? 'nav-active' : 'nav-inactive'"
-					>Industrial</a>
-				<a href='#' 
-				ng-click="gotoView(Views.RESIDENTIAL);"
-				ng-class="nlIsActive(Views.RESIDENTIAL) ? 'nav-active' : 'nav-inactive'"
-					>Residential</a>
-				<a href='#' 
-				ng-click="gotoView(Views.BUSINESS);"
-				ng-class="nlIsActive(Views.BUSINESS) ? 'nav-active' : 'nav-inactive'"
-					>Business</a>
-				<a href='#' 
-				ng-click="gotoView(Views.HOTEL);"
-				ng-class="nlIsActive(Views.HOTEL) ? 'nav-active' : 'nav-inactive'"
-					>Hotels</a>
-				<a href='#' 
-				ng-click="gotoView(Views.RETAIL);"
-				ng-class="nlIsActive(Views.RETAIL) ? 'nav-active' : 'nav-inactive'"
-					>Retail</a>
-				<a href='#' 
-				class='underline'
-				ng-click="gotoView(Views.INVESTMENT);"
-				ng-class="nlIsActive(Views.INVESTMENT) ? 'nav-active' : 'nav-inactive'"
-					>Investment</a>
-				<a href='#' 
-				class='underline'
-				ng-click="gotoView(Views.AGRICULTURAL);"
-				ng-class="nlIsActive(Views.AGRICULTURAL) ? 'nav-active' : 'nav-inactive'"
-					>Agricultural</a>
-				<a href='#' 
-				ng-click="gotoView(Views.SOLD);"
-				ng-class="nlIsActive(Views.SOLD) ? 'nav-active' : 'nav-inactive'"
+					ng-click="gotoSoldView();"
+				ng-class="(view == Views.SOLD) ? 'nav-active' : 'nav-inactive'"
 					>Sold</a>
 		  	</span>
 		</div>
