--- a/django_web_server/static/fragments/contactbar.html
+++ b/django_web_server/static/fragments/contactbar.html
@@ -3,7 +3,10 @@
 
 		<div class='contact unselectable' style='width:100%;'>
 
-			<span style='float:left;margin-left:100px;margin-right:10px'>
+			<span style='width:100px;'></span>
+
+			<!-- ICONS -->
+			<span style='float:left;margin-right:10px;'>
 		  		<img
 		  			style='margin-top:5px;margin-bottom:5px;'
 					ng-src="/static/image/icon-fb.png"
@@ -27,7 +30,7 @@
 
 			<!-- BEGIN REVERSE ORDER ////////////////////////////////////// -->
 
-		  	<span style='float:right;margin-right:20px;' class='grey-text'>
+		  	<span style='float:right;margin-right:100px;' class='grey-text'>
 		  		{{ model.contacts[0].email }}
 		  	</span>
 
