--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -4,6 +4,7 @@
 	style='width:100%;'
 	>
 
+	<!-- SLIDE SHOW WITH HEADER TEXT OVERLAY -->
 	<div style='width:100%; position: relative;'>
 
 		<div style='
@@ -48,37 +49,41 @@
     	</div>
 	</div>
 
+	<!-- CATEGORIES -->
 	<div class='light-grey-background unselectable'>
-		<div style='font-size:2.5em;margin-left:25px;padding-top:20px;'>
+
+		<div style='font-size:2.5em;margin-left:100px;padding-top:20px;'>
 			<span class='vomit-green'>What are you</span>
 			<span class='grey-text'>looking for ?</span>
 		</div>
 		<div class='justify'
 			style='width:70%;
-				margin-left:25px;margin-bottom:25px;margin-top:25px;'>
+				margin-left:100px;margin-bottom:25px;margin-top:25px;'>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		</div>
 
-		<div style='margin-left:25px;width:75%;' class='unselectable'>
+		<div style='margin-left:100px;width:80%;' class='unselectable'>
 			<div>				
-				<img ng-repeat='categoryView in model.categoryViews'
+				<img ng-repeat='category in model.categories'
 					style='margin-right:25px;margin-bottom:15px;'
-					ng-src="{{ '/static/image/category_tiles/' + categoryView.category + '.jpg'}}"
-					ng-click='gotoView(categoryView.view);'
+					ng-src="{{ '/static/image/category_tiles/' + category + '.jpg'}}"
+					ng-click='gotoCategoryView(category);'
 					/>
 			</div>
 		</div>
 	</div>
 
+	<!-- BLURB -->
 	<div class='unselectable' style='margin-bottom:50px;'>
 		<div
 			class='frp-font'
-			style='font-size:2.5em;margin-left:20px;padding-top:20px;margin-bottom:50px;'>
+			style='font-size:2.5em;margin-left:100px;padding-top:50px;margin-bottom:50px;'>
 			<span class='vomit-green'>FISHER ROELAND</span>
 			<span class='grey-text'>PROPERTIES</span>
 		</div>
 
-		<div class='three-column-container grey-text' style='margin-left:25px;padding-top:20px;'>
+		<div class='three-column-container grey-text'
+			style='margin-left:100px;padding-top:20px;'>
 			
 			<div class='column column1' style='margin-right:20px;'>
 				<img style='display:block;' ng-src="/static/image/icon-gears.png"/>
@@ -157,5 +162,4 @@
 			</div>
 		</div>
 	</div>
-
 </div>
