--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -315,3 +315,14 @@ div.tailbar-blurb-header span {
 .justify {
 	text-align: justify;
 }
+
+/* ------------------------------------------------ */
+
+.category-header-image-overlay-text {
+	
+	position: absolute; 
+	top:0px;
+	left:0px;
+  	width: 100%;
+  	height:100%;
+}
