--- a/django_web_server/static/fragments/navbar.html
+++ b/django_web_server/static/fragments/navbar.html
@@ -18,7 +18,7 @@
 				<a ng-repeat='category in model.categories'
 					href='#' ng-click="gotoCategoryView(category);"
 					style='text-transform:capitalize;'
-					ng-class="((view == Views.CATEGORY) && (selectedCategory == category)) ? 'nav-active' : 'nav-inactive'"
+					ng-class="((view == Views.CATEGORY) && (model.selectedCategory == category)) ? 'nav-active' : 'nav-inactive'"
 					>
 					{{ category }}
 				</a>
