category tiles - winning ?

--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -320,6 +320,12 @@ div.tailbar-blurb-header span {
 	text-align: justify;
 }
 
+.ellipsis {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 /* ------------------------------------------------ */
 
 .category-header-image-overlay-text {
