category - tile detail - working

--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -141,6 +141,10 @@ Very light Grey:
 	color: #a1bd1b;
 }
 
+.light-green-background {
+	background-color: #a1bd1b;
+}
+
 .vomit-green {
 	color: #a1be14;
 }
