--- a/django_web_server/static/fragments/category.html
+++ b/django_web_server/static/fragments/category.html
@@ -57,6 +57,8 @@
 					<img 
 						style='width:324px;height:200px;margin-top:25px;'
 						ng-src="{{model.dataImageUrl(property.images[0])}}"
+						title={{property.name}}
+						alt={{property.name}}
 						/>
 				</div>
 				
@@ -68,18 +70,10 @@
 				</div>
 				
 				<div
-					ng-if='property.shortLocation !== property.name'
 					style='width:324px;'
 					class='grey-text'
 					>
 					{{ property.shortLocation }}
-				</div>
-				<div
-					ng-if='property.shortLocation === property.name'
-					style='width:324px;'
-					class='grey-text'
-					>
-					&nbsp;
 				</div>
 
 				<div ng-if='model.propertyHasArea(property)'>
@@ -94,11 +88,17 @@
 						&nbsp;({{ model.propertyAreaSqmText(property) }})
 					</span>
 				</div>
-				<div ng-if='model.propertyHasArea(property) == false' 
-					class='bold'
-					style='width:324px;font-size:1.5em;'>
-					&nbsp;
-				</span>
+				<div ng-if='model.propertyHasArea(property) == false'>
+					<span
+						class='white bold'						 
+						style='width:324px;font-size:1.5em;'>
+						none
+					</span>
+				</div>
+				<div style='margin-top:5px;display: inline-block;border-radius: 3px;'
+					class='bold white light-green-background'>
+					&nbsp;MORE INFO&nbsp;
+				</div>
 			</div>
 		</div>
 	</div>
