--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -340,3 +340,9 @@ div.tailbar-blurb-header span {
   	width: 100%;
   	height:100%;
 }
+
+.drop-shadow {
+	-moz-box-shadow: 0px 1px 2px grey;
+	-webkit-box-shadow: 0px 1px 2px grey;
+	box-shadow: 0px 1px 2px grey;
+}
