--- a/django_web_server/templates/sites.html
+++ b/django_web_server/templates/sites.html
@@ -42,8 +42,8 @@
 				</div>
 
 				<div>
-				{% if last_updated_at %}
-					site.last_updated_at
+				{% if site.last_updated_at %}
+					last updated at {{ site.last_updated_at }} ({{ site.update_log_message }})
 				{% else %}			
 					never updated
 				{% endif %}
@@ -81,8 +81,7 @@
 </body>
 </html>
 
-
-<!-- <html>
+<html>
 	<title>Site Data Model Manager</title>
 	<head>
 		<script type="text/javascript">		
@@ -94,4 +93,4 @@
 	<body>
 		
 	</body>
-</html> -->
+</html>
