--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -99,6 +99,10 @@ a {
 	text-transform: uppercase;
 }
 
+.underline {
+	text-decoration: underline !important;
+}
+
 /* --------------------------------------------------------------------------------- */
 /* NAV BAR */
 
@@ -118,44 +122,44 @@ Very light Grey:
 */
 
 .white {
-	color: white;
+	color: white !important;
 }
 
 .grey-text {
-	color: #676767;
+	color: #676767 !important;
 }
 
 .tail-bar-text {
-	color: 747474
+	color: 747474 !important;
 }
 
 .light-grey {
-	color: #f5f5f5;
+	color: #f5f5f5 !important;
 }
 
 .green {
-	color: #a0bf14;
+	color: #a0bf14 !important;
 }
 
 .light-green {
-	color: #a1bd1b;
+	color: #a1bd1b !important;
 }
 
 .light-green-background {
-	background-color: #a1bd1b;
+	background-color: #a1bd1b !important;
 }
 
 .vomit-green {
-	color: #a1be14;
+	color: #a1be14 !important;
 }
 
 /* #f5f5f5 */
 .light-grey-background {
-	background-color: #f0f0f0;
+	background-color: #f0f0f0 !important;
 }
 
 .dark-grey-background {
-	background-color: #252525;
+	background-color: #252525 !important;
 }
 
 .nav-active {
